Fixed spacing

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 .About{
-    margin-top: 600px;
+    margin-top: 680px;
     margin-bottom: 100px;
 }
 .Portfolio{
